Attempt to fix jumpy background

--- a/_includes/background-blog.css
+++ b/_includes/background-blog.css
@@ -20,7 +20,7 @@ body::before {
   position: fixed;
   filter: blur({{ blur-level }}px);
   top: 0; left: 0;
-  width: 100%; height: 100%;
+  width: 100vw; height: 100vh;
   background-color: {{ background-color }};
   background-position: {{ background-position }};
   background-size: cover;
