--- a/_includes/presets.css
+++ b/_includes/presets.css
@@ -1,6 +1,6 @@
 body, html {
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	margin: 0;
 	padding: 0;
 }
